[bp/r71077][FIX] fixed layout bug when admin options were highlighted

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -930,7 +930,7 @@ div.highlight {
   display: inline-block; }
 
 div.highlight.adminoptionbox {
-  display: flex;
+  display: block;
   padding: 1rem;
   margin-left: -1rem;
   margin-right: -1rem; }
